fix #568, #571, #572, #576 #577 Add the ability to specify custom date formatters in datebox Border css fix for the collapsible panel Card title overflows header action elements Implement transition for collapsible Allow setting element styles without breaking the builder chain

--- a/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/collapsible/collapsible.css
+++ b/domino-ui/src/main/resources/org/dominokit/domino/ui/public/css/collapsible/collapsible.css
@@ -1,22 +1,28 @@
 .panel-group {
     margin-bottom: 20px;
 }
+
 .panel-group .panel {
     margin-bottom: 0;
 }
+
 .panel-group .panel + .panel {
     margin-top: 5px;
 }
+
 .panel-group .panel-heading {
     border-bottom: 0;
 }
+
 .panel-group .panel-heading + .panel-collapse > .panel-body,
 .panel-group .panel-heading + .panel-collapse > .list-group {
     border-top: 1px solid #ddd;
 }
+
 .panel-group .panel-footer {
     border-top: 0;
 }
+
 .panel-group .panel-footer + .panel-collapse .panel-body {
     border-bottom: 1px solid #ddd;
 }
@@ -24,11 +30,13 @@
 .panel-default {
     border-color: #ddd;
 }
+
 .panel-default > .panel-heading {
     color: #333;
     background-color: #f5f5f5;
     border-color: #ddd;
 }
+
 .panel-default > .panel-heading + .panel-collapse > .panel-body {
     border-top-color: #ddd;
 }
@@ -39,8 +47,8 @@
 
 .panel {
     background-color: #fff;
-    border: 1px solid transparent;
 }
+
 .panel-body {
     padding: 15px;
 }
@@ -48,12 +56,14 @@
 .panel-heading > .dropdown .dropdown-toggle {
     color: inherit;
 }
+
 .panel-title {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 16px;
     color: inherit;
 }
+
 .panel-title > a,
 .panel-title > small,
 .panel-title > .small,
@@ -61,6 +71,7 @@
 .panel-title > .small > a {
     color: inherit;
 }
+
 .panel-footer {
     padding: 10px 15px;
     background-color: #f5f5f5;
@@ -95,4 +106,56 @@
 
 .panel-group .panel .panel-body:not([class*="bg-"]) {
     color: #555;
+}
+
+.height-collapsed-overflow {
+    overflow: hidden;
+}
+
+.height-collapsed-trans-100 {
+    transition: height 100ms, padding-top 100ms, padding-bottom 100ms, margin-top 100ms, margin-bottom 100ms;
+}
+
+.height-collapsed-trans-200 {
+    transition: height 200ms, padding-top 200ms, padding-bottom 200ms, margin-top 200ms, margin-bottom 200ms;
+}
+
+.height-collapsed-trans-300 {
+    transition: height 300ms, padding-top 300ms, padding-bottom 300ms, margin-top 300ms, margin-bottom 300ms;
+}
+
+.height-collapsed-trans-400 {
+    transition: height 400ms, padding-top 400ms, padding-bottom 400ms, margin-top 400ms, margin-bottom 400ms;
+}
+
+.height-collapsed-trans-500 {
+    transition: height 500ms, padding-top 500ms, padding-bottom 500ms, margin-top 500ms, margin-bottom 500ms;
+}
+
+.height-collapsed-trans-600 {
+    transition: height 600ms, padding-top 600ms, padding-bottom 600ms, margin-top 600ms, margin-bottom 600ms;
+}
+
+.height-collapsed-trans-700 {
+    transition: height 700ms, padding-top 700ms, padding-bottom 700ms, margin-top 700ms, margin-bottom 700ms;
+}
+
+.height-collapsed-trans-800 {
+    transition: height 800ms, padding-top 800ms, padding-bottom 800ms, margin-top 800ms, margin-bottom 800ms;
+}
+
+.height-collapsed-trans-900 {
+    transition: height 900ms, padding-top 900ms, padding-bottom 900ms, margin-top 900ms, margin-bottom 900ms;
+}
+
+.height-collapsed-trans-1000 {
+    transition: height 1000ms, padding-top 1000ms, padding-bottom 1000ms, margin-top 1000ms, margin-bottom 1000ms;
+}
+
+.height-collapsed {
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    margin-top: 0px !important;
+    margin-bottom: 0px !important;
+    height: 0 !important;
 }
